k8s/apps/dump/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dump
  namespace: dump
  labels:
    app.kubernetes.io/name: dump
    app.kubernetes.io/part-of: dump
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: dump
    app.kubernetes.io/part-of: dump
