k8s/apps/dump/03-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: dump-gateway
  namespace: dump
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_CLUSTER_ISSUER}
spec:
  gatewayClassName: cilium
  listeners:
    - name: tls-gateway
      protocol: HTTPS
      port: 443
      hostname: &hostname "dump.${SECRET_DOMAIN}"
      tls:
        certificateRefs:
          - kind: Secret
            name: *hostname
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: dump-http-route
  namespace: dump
spec:
  parentRefs:
    - name: dump-gateway
  hostnames:
    - &hostname "dump.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dump
          port: 8080
