k8s/apps/dump/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dump
  namespace: dump
  labels:
    app.kubernetes.io/name: dump
    app.kubernetes.io/part-of: dump
spec:
  ingressClassName: cilium
  rules:
  - host: dump.lolwtf.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dump
            port:
              number: 8080
  defaultBackend:
    service:
      name: dump
      port:
        number: 8080
