k8s/apps/dump/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dump
  labels:
    app.kubernetes.io/name: dump
    app.kubernetes.io/part-of: dump
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dump
  labels:
    app.kubernetes.io/name: dump
    app.kubernetes.io/part-of: dump
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
